--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: frankie
-SEOTitle: frankie
+title: Frankie
+SEOTitle: Frankie Yan's Blog
 header-img: img/post-bg-desk.jpg
 email: frankie.yanfeng@gmail.com
 description: "fail well, fail fast"
@@ -24,7 +24,7 @@ github_username:    frankie-yanfeng
 facebook_username:  eyan422
 jianshu_username:   98b268e6141f
 twitter_username:   eyan422
-#linkedin_username:  
+linkedin_username:  feng-yan-85925124
 
 
 
