--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Frankie
+title: Frankie Yan's Blog
 SEOTitle: Frankie Yan's Blog
 header-img: img/post-bg-desk.jpg
 email: frankie.yanfeng@gmail.com
