--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ github_repo: "https://github.com/frankie-yanfeng/frankie-yanfeng.github.io.git" 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
 sidebar-about-description: "You achievement is in where your time spent on."
-sidebar-avatar: /img/avatar_g.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
+sidebar-avatar: /img/icon.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
 
