--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ kramdown:
 
 # 评论系统
 # Disqus（https://disqus.com/）
-disqus_username: frankie-yanfeng
+disqus_username: disqus_83Qlk58Ra3
 
 # Gitalk
 gitalk:
